--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
                     </li>
                     <li id="top-search">
                         <input type="text" class="search">
-                        <a class="search_link" href="https://www.google.com"><img class="submit_image"
-                                                                                      src="img/search-submit.png"></a>
+                        <a class="search_link" href="https://www.google.com"><img class="submit_image" alt="google" src="img/search-submit.png"></a>
                     </li>
                 </ul>
 
@@ -91,7 +90,13 @@
 
 </section>
 
-<section>
+<!-- <section id="content">
+
+    <div class="container">
+        <div class="content_item">
+            <h2> -->
+
+<section id="our">
     <div class="container">
         <div class="services clearfix">
             <div class="services_item">
