all map and rights

--- a/index.html
+++ b/index.html
@@ -227,8 +227,7 @@
     <section id="maps">
         <div class="container_map">
             <div class="map_item">
-                <h4>latest articles</h4>
-                <ul>
+                <ul> <h4>latest articles</h4>
                     <li>
                         <a href="#">Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget.</a>
                     </li>
@@ -244,13 +243,12 @@
                 </ul>
             </div>
             <div class="map_item">
-                <h4>Archive</h4>
-                <ul>
+                <ul> <h4>Archive</h4>
                     <li>
                         <a href="#">August 2011</a>
                     </li>
                     <li>
-                        <a href="#">Luly 2011</a>
+                        <a href="#">July 2011</a>
                     </li>
                     <li>
                         <a href="#">May 2011</a>
@@ -264,8 +262,7 @@
                 </ul>
             </div>
             <div class="map_item">
-                <h4>Meta</h4>
-                <ul>
+                <ul> <h4>Meta</h4>
                     <li>
                         <a href="#">Log in</a>
                     </li>
@@ -281,8 +278,7 @@
                 </ul>
             </div>
             <div class="map_item">
-                <h4>Categories</h4>
-                <ul>
+                <ul> <h4>Categories</h4>
                     <li>
                         <a href="#">Donec porta diam</a>
                     </li>
