--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
                     Welcome!
                 </h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipis cing elit mauris.
+                    <span class="welcome">Lorem ipsum dolor sit amet, consectetuer adipis cing elit mauris.
+                    </span>
                 </p>
                 <p>
                     Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit. Aenean
@@ -186,7 +187,7 @@
                 <h2>
                     Our Clients Say
                 </h2>
-                <div class="arow_box">
+                <div class="arrow_box">
                     <p>
                         Suspendisse sollicitudin velit sed leo. Ut pharetra augue nec augue. Nam elit agna, endrerit sit amet,
                         tincidunt, viverra sed, nulla. Donec porta diam eu massa.
@@ -196,28 +197,56 @@
                         lacinia fermentum. Donec in velit vel ipsum auctor pulvinar.
                     </p>
                 </div>
-                <p>
-                    Bradley Grosh, Company Name
-                </p>
+                <div class="our_clients">
+                    <ul id="name_clients">
+                        <li>Bradley Grosh,</li>
+                        <li>Company Name</li>
+                    </ul>
+                </div>
             </div>
             <div class="content_item">
-                <h2>
-                    From The Blog
-                </h2>
-                <p>
-                    Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit.
-                </p>
-                <p>
-                    Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante eu lacus. Vestibulum libero nisl, porta...
-                </p>
-                <p>
-                    Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante eu lacus. Vestibulum libero nisl, porta...
-                </p>
-                <h6>
-                    <a href="#" class="button">
-                        View All Posts
-                    </a>
-                </h6>
+                <div id="blog">
+                    <h2>
+                        From The Blog
+                    </h2>
+                    <p>
+                        <span class="blog_red">
+                            Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit.
+                        </span>
+                    </p>
+                    <p> <!-- валидатор матюкается -->
+                        <ul class="blog_line">
+                            <li>May 11, 2011</li>
+                            <li>Admin</li>
+                            <li>3 Comments</li>
+                        </ul>
+                    </p>
+                    <p>
+                        Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante eu lacus. Vestibulum libero nisl, porta...
+                    </p>
+                    <p>
+                        <span class="blog_red">
+                            Aliquam erat volutpat. Duis ac turpis.
+                        </span>
+                    </p>
+                    <p> <!-- валидатор матюкается -->
+                        <ul class="blog_line">
+                            <li>May 11, 2011</li>
+                            <li>Admin</li>
+                            <li>3 Comments</li>
+                        </ul>
+                    </p>
+                    <p>
+                        Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante eu lacus. Vestibulum libero nisl, porta...
+                    </p>
+                    <h6>
+                        <a href="#" class="button">
+                            View All Posts
+                        </a>
+                    </h6>
+
+                </div>
+                
             </div>
     
         </div>
@@ -225,7 +254,8 @@
     <section id="maps">
         <div class="container_map">
             <div class="map_item">
-                <ul> <h4>latest articles</h4>
+                <h4>latest articles</h4>
+                <ul> 
                     <li>
                         <a href="#">Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget.</a>
                     </li>
@@ -241,7 +271,8 @@
                 </ul>
             </div>
             <div class="map_item">
-                <ul> <h4>Archive</h4>
+                <h4>Archive</h4>
+                <ul> 
                     <li>
                         <a href="#">August 2011</a>
                     </li>
@@ -260,7 +291,8 @@
                 </ul>
             </div>
             <div class="map_item">
-                <ul> <h4>Meta</h4>
+                <h4>Meta</h4>
+                <ul> 
                     <li>
                         <a href="#">Log in</a>
                     </li>
@@ -276,7 +308,8 @@
                 </ul>
             </div>
             <div class="map_item">
-                <ul> <h4>Categories</h4>
+                <h4>Categories</h4>
+                <ul> 
                     <li>
                         <a href="#">Donec porta diam</a>
                     </li>
