--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="twitter"><i class="fab fa-twitter"></i></i></a>
+                                <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
                             </li>
                             <li>
                                 <a href="#" class="rss"><i class="fas fa-rss"></i></a>
@@ -95,7 +95,15 @@
                     See Our Portfolio
                 </a>
             </h3>
+            <div class="slideshow-container">
+                <div class="dot-container">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                </div>  
+            </div>
         </div>
+       
     
     </section>
     <section id="our">
