--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                         <a href="#our_Services">Our Services</a>
                     </li>
                     <li class="menu_item_logo">
-                        <a href="#" id="logo_link">
-                            <img class="logo_img" src="img/logo.png" alt="Design_group" class="logo">
+                        <a href="#" class="logo_link">
+                            <img id="logo_img" src="img/logo.png" alt="Design_group" class="logo">
                         </a>
                     </li>
                     <li class="menu_item">
@@ -76,7 +76,8 @@
                             <i class="fa fa-bars"></i>
                         </a>
                     </li>
-                </ul>  
+                </ul> 
+                <img src="img/nav_bg.png" alt="image" class="menu-img">
             </nav>
         </div>
     </header>
